<resources>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="duplicate">Duplicate…</string>
    <string name="archive">Archive</string>
    <string name="unarchive">Unarchive</string>
    <string name="toggle_archive">Archive/Unarchive</string>
    <string name="archived">Archived</string>
    <string name="cancel">Cancel</string>
    <string name="keep">Keep</string>
    <string name="rename">Rename</string>
    <string name="undo">Undo</string>
    <string name="search">Search</string>
    <string name="proceed">Proceed</string>
    <string name="oops_aletr_title">Oops …</string>
    <string name="please_wait">Please wait</string>
    <string name="unexpected_error">An unexpected error occurred</string>
    <string name="app_name">Schedule &amp; Notes</string>
    <string name="title_home">Home</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_notes">Notes</string>
    <string name="title_lists">Lists</string>
    <string name="title_movies_list">Movies List</string>
    <string name="title_music_list">Music List</string>
    <string name="title_shopping_list">Shopping List</string>
    <string name="title_languages_list">Vocabulary List</string>
    <string name="title_languages_list_archive">Vocabulary List archive</string>
    <string name="title_categories">Categories</string>
    <string name="title_settings">Settings</string>
    <string name="title_import">Import</string>
    <string name="title_export">Export</string>
    <string name="today_afternoon">Today in the afternoon</string>
    <string name="today_evening">Today in the evening</string>
    <string name="tomorrow_noon">Tomorrow at noon</string>
    <string name="tomorrow_afternoon">Tomorrow in the afternoon</string>
    <string name="tomorrow_evening">Tomorrow in the evening</string>
    <string name="manage_data_header">Manage data</string>
    <string name="import_title">Import</string>
    <string name="import_summary">Import data from a file</string>
    <string name="export_title">Export</string>
    <string name="export_summary">Export data to a file</string>
    <string name="delete_events_older_than_title">Delete events older than…</string>
    <string name="delete_events_older_than_summary">Delete events that end by a selected date (inclusive)</string>
    <string name="notifications_header">Notifications</string>
    <string name="receive_notifications_title">Receive notifications</string>
    <string name="receive_notifications_summary_on">You\'ll receive selected notifications</string>
    <string name="receive_notifications_summary_off">You won\'t receive any notifications</string>
    <string name="schedule_events_notifications_title">Schedule events notifications</string>
    <string name="schedule_events_notifications_summary">Get notified about events 30 minutes before the beginning and when they start</string>
    <string name="movies_list_notifications_title">Movies List notifications</string>
    <string name="movies_list_notifications_summary">Receive reminders to watch a random film from your Movies List</string>
    <string name="music_list_notifications_title">Music List notifications</string>
    <string name="music_list_notifications_summary">Note down bands, albums, and songs you are interested in and get reminders to check them out</string>
    <string name="languages_list_notifications_title">Vocabulary List notifications</string>
    <string name="languages_list_notifications_summary">Recall learned words and phrases from time to time by adding them to your Vocabulary List and receiving periodic notifications. This way you will be able to memorize them better</string>
    <string name="other_header">Other</string>
    <string name="languages_list_sorting_order_title">Vocabulary List sorting order</string>
    <string name="languages_list_sorting_order_word">By word</string>
    <string name="languages_list_sorting_order_translation">By translation</string>
    <string name="delete_events_older_than_succeeded_snackbar">Successfully deleted the selected range of events</string>
    <string name="backing_up_toast">Backing up …</string>
    <string name="backing_up_failed_toast">Couldn\'t create a backup</string>
    <string name="backup_created_successfully_toast">Backup created successfully</string>
    <string name="import_alert_title">Import alert</string>
    <string name="import_alert_message">Importing implies loss of all the existing data. Are you sure you want to proceed?</string>
    <string name="importing_from_backup_toast">Importing from backup …</string>
    <string name="successfully_imported_from_backup_toast">Successfully imported from backup</string>
    <string name="importing_from_backup_failed_toast">Couldn\'t import data from backup</string>
    <string name="images_processing_might_take_long_time">Attached images may take a long time to process</string>
    <string name="event_notifications_group_notification_title">A schedule event has started or starts soon</string>
    <string name="event_started_title">%1$s - has started</string>
    <string name="event_starts_soon_title">%1$s - starts soon</string>
    <string name="movie_notification_text">You wanted to watch this movie. Maybe it\'s time to do it?</string>
    <string name="music_notification_text">You wanted to listen to this. Maybe it\'s time to do it?</string>
    <string name="postpone_event_by_one_day">Postpone by a day</string>
    <string name="schedule_events_notification_channel_name">Schedule events</string>
    <string name="schedule_events_notification_channel_description">Schedule events notifications</string>
    <string name="languages_list_notification_channel_name">Vocabulary List</string>
    <string name="movies_list_notification_channel_name">Movies List</string>
    <string name="music_list_notification_channel_name">Music List</string>
    <string name="notifications_permission_request_alert_title">Enable notifications</string>
    <string name="notifications_permission_request_alert_message">We need the notifications permission in order to notify you about upcoming schedule events and send lists notifications</string>
    <string name="title_create_category">Create category</string>
    <string name="title_edit_category">Edit category</string>
    <string name="add_category_fab">Add category</string>
    <string name="category_name_input_hint">Category name</string>
    <string name="category_name_edit_text_title">Specify category name</string>
    <string name="color_selection_title">Pick a color set</string>
    <string name="color_selection_subtitle">Different color shades are used for light and dark mode</string>
    <string name="specify_category_name_snackbar">Specify category name</string>
    <string name="category_deleted_snackbar">The category has been deleted</string>
    <string name="category_deletion_alert_title">Delete category</string>
    <string name="category_deletion_alert_message">Are you sure you want to delete this category? All the schedule events and notes that belong to it will not anymore</string>
    <string name="title_create_note">Create note</string>
    <string name="title_edit_note">Edit note</string>
    <string name="add_note_fab">Add note</string>
    <string name="note_deleted_snackbar">The note has been deleted</string>
    <string name="specify_note_title_snackbar">Specify note title</string>
    <string name="note_context_menu_title">Note actions</string>
    <string name="note_title_input_hint">Note title</string>
    <string name="note_body_input_hint">Note body (optional)</string>
    <string name="note_deletion_alert_title">Delete note</string>
    <string name="note_deletion_alert_message">Are you sure you want to delete this note?</string>
    <string name="uncategorized_notes_category_placeholder">No category</string>
    <string name="title_create_event">Create event</string>
    <string name="title_edit_event">Edit event</string>
    <string name="add_event_fab">Add event</string>
    <string name="prev_date_btn_description">Previous date</string>
    <string name="selected_date_btn_description">Selected date. Click to open calendar</string>
    <string name="next_date_btn_description">Next date</string>
    <string name="event_context_menu_title">Event actions</string>
    <string name="event_deletion_alert_title">Delete event</string>
    <string name="event_deletion_alert_message">Are you sure you want to delete this event?</string>
    <string name="event_title_input_hint">Event title</string>
    <string name="event_details_input_hint">Event details (optional)</string>
    <string name="event_duplication_warning">The event duplicate will be created only once you tap the Save button</string>
    <string name="specify_event_title_snackbar">Specify event title</string>
    <string name="jump_to_today_snackbar">Jumping to Today …</string>
    <string name="event_deleted_snackbar">The event has been deleted</string>
    <string name="hidden_event">Hidden event</string>
    <string name="postpone_to_next_day_menu_item">Postpone to the next day</string>
    <string name="postpone_to_tomorrow_menu_item">Postpone to tomorrow</string>
    <string name="postpone_to_date_menu_item">Postpone to…</string>
    <string name="pick_category_dialog_title">Pick a category</string>
    <string name="create_category_dialog_button">Create</string>
    <string name="category_set_snackbar">Category set</string>
    <string name="excluded_from_category_snackbar">Excluded from category</string>
    <string name="set_category_menu_item">Set category</string>
    <string name="remove_category_menu_item">Exclude from category</string>
    <string name="is_hidden_checkbox">Hidden</string>
    <string name="is_hidden_checkbox_description">Use this to hide this events title in the schedule list so that others won\'t be able to see it when you scroll through the list. \"Hidden event\" text will be shown instead. Tap on the event in the list to see its info</string>
    <string name="start_time_less_than_end_time_snackbar">The start time cannot be later than the end time</string>
    <string name="add_list_fab">Add list</string>
    <string name="movies_list_btn">Movies</string>
    <string name="music_list_btn">Music</string>
    <string name="shopping_list_btn">Shopping</string>
    <string name="languages_list_btn">Vocabulary</string>
    <string name="list_creation_alert_title">Add list</string>
    <string name="list_rename_alert_title">Rename list</string>
    <string name="list_deleted_snackbar">The list has been deleted</string>
    <string name="list_deletion_alert_title">Delete list</string>
    <string name="list_deletion_alert_message">Are you sure you want to delete this list? All its items will be lost</string>
    <string name="list_creation_empty_input_alert_message">List name can\'t be empty. Try again</string>
    <string name="list_renaming_empty_input_alert_message">Can\'t rename with empty input. Try again</string>
    <string name="user_defined_list_name_input_hint">List name</string>
    <string name="shopping_list_item_text_input_hint">Item text</string>
    <string name="edit_shopping_list_item_count_input_hint">Count (defaults to 1)</string>
    <string name="edit_shopping_list_item_price_input_hint">Price (optional)</string>
    <string name="word_or_phrase">Word pr phrase</string>
    <string name="transcription">Transcription (optional)</string>
    <string name="translation">Translation(s) (optional)</string>
    <string name="explanation">Explanation (optional)</string>
    <string name="usage_example">Usage example(s) (optional)</string>
    <string name="usage_example_images">Add usage example images</string>
    <string name="sort_by_options_menu_item">Sort by</string>
    <string name="sort_by_word_options_menu_item">Word</string>
    <string name="sort_by_translation_options_menu_item">Translation</string>
</resources>