<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/event_delete_menu_item"
        android:icon="@drawable/ic_delete_24"
        android:title="@string/delete" />

    <item
        android:id="@+id/event_set_category_menu_item"
        android:icon="@drawable/ic_categories_24"
        android:title="@string/set_category_menu_item" />

    <item
        android:id="@+id/event_remove_category_menu_item"
        android:icon="@drawable/ic_category_crossed_out_24"
        android:title="@string/remove_category_menu_item" />

    <item
        android:id="@+id/event_postpone_to_next_day_menu_item"
        android:icon="@drawable/ic_clock_24"
        android:title="@string/postpone_to_next_day_menu_item" />

    <item
        android:id="@+id/event_postpone_to_tomorrow_menu_item"
        android:icon="@drawable/ic_clock_24"
        android:title="@string/postpone_to_tomorrow_menu_item" />

    <item
        android:id="@+id/event_postpone_to_date_menu_item"
        android:icon="@drawable/ic_clock_24"
        android:title="@string/postpone_to_date_menu_item" />

</menu>