<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/ic_schedule_24"
        android:title="@string/title_schedule" />

    <item
        android:id="@+id/navigation_notes"
        android:icon="@drawable/ic_notes_24"
        android:title="@string/title_notes" />

    <item
        android:id="@+id/navigation_lists"
        android:icon="@drawable/ic_lists_24"
        android:title="@string/title_lists" />

    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/ic_categories_24"
        android:title="@string/title_categories" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/title_settings" />

    <!--    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home" />-->

</menu>