<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/ic_save_24"
        android:title="@string/save"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/menu_archive"
        android:icon="@drawable/ic_archive_24"
        android:title="@string/archive"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/menu_unarchive"
        android:icon="@drawable/ic_unarchive_24"
        android:title="@string/unarchive"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_delete_24"
        android:title="@string/delete"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/menu_cancel"
        android:icon="@drawable/ic_cancel_24"
        android:title="@string/cancel"
        app:showAsAction="ifRoom|withText" />

</menu>