<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|withText|collapseActionView" />

    <item
        android:id="@+id/menu_archived"
        android:icon="@drawable/ic_archive_24"
        android:title="@string/archived"
        app:showAsAction="ifRoom|withText" />

    <item android:title="@string/sort_by_options_menu_item">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/menu_sort_by_word_or_phrase"
                    android:title="@string/sort_by_word_options_menu_item" />

                <item
                    android:id="@+id/menu_sort_by_translation"
                    android:title="@string/sort_by_translation_options_menu_item" />

            </group>

        </menu>

    </item>

</menu>