<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.schedule.eventDetails.EventDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar" />

        <ScrollView
            android:id="@+id/scrollable_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/page_margin">

                <EditText
                    android:id="@+id/event_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/event_title_input_hint"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="textCapSentences"
                    android:textSize="34sp" />

                <android.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <com.na21k.schedulenotes.ui.controls.DateTimeStartsEndsPickerView
                    android:id="@+id/date_time_starts_ends_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <android.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <CheckBox
                    android:id="@+id/is_hidden"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/is_hidden_checkbox"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/is_hidden_checkbox_description"
                    android:textSize="16sp" />

                <android.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <EditText
                    android:id="@+id/event_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/event_details_input_hint"
                    android:importantForAutofill="no"
                    android:inputType="textCapSentences|textMultiLine"
                    android:textSize="20sp" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/duplication_warning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:visibility="gone"
                    app:cardBackgroundColor="@color/warning_card_background"
                    app:cardCornerRadius="@dimen/corner_radius"
                    app:contentPadding="10dp"
                    app:strokeColor="@color/warning_card_stroke"
                    app:strokeWidth="@dimen/stroke_width_warning_card"
                    tools:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/event_duplication_warning" />

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>