<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.lists.languages.wordOrPhraseDetails.WordOrPhraseDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="false"
            android:overScrollMode="always">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/page_margin"
                    android:paddingTop="@dimen/page_margin"
                    android:paddingBottom="8dp">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/word_or_phrase">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/word_or_phrase"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:importantForAutofill="no"
                            android:inputType="textCapSentences"
                            android:textSize="34sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:hint="@string/transcription">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/transcription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:importantForAutofill="no"
                            android:inputType="textPhonetic"
                            android:textSize="20sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:hint="@string/translation">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/translation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:importantForAutofill="no"
                            android:inputType="textCapSentences"
                            android:textSize="20sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:hint="@string/explanation">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/explanation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="flagNavigateNext"
                            android:importantForAutofill="no"
                            android:inputType="textCapSentences|textMultiLine"
                            android:textSize="20sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:hint="@string/usage_example">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/usageExample"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:importantForAutofill="no"
                            android:inputType="textCapSentences|textMultiLine"
                            android:textSize="20sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/usage_example_images"
                        android:textSize="20sp" />

                </LinearLayout>

                <ProgressBar
                    android:id="@+id/loading_attached_images_progressbar"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="20dp" />

                <include
                    android:id="@+id/included_images_list"
                    layout="@layout/images_list" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>